tests/failing/else.tail
let v1:[bool]0 = gti(3,2) in
let v9:[int]0 = prSclI(condScl(fn v7:[int]0 => addi(v7,30),v1,condScl(fn v4:[int]0 => subi(v4,30),notb(v1),28))) in
let v10:[bool]0 = gti(3,3) in
let v18:[int]0 = prSclI(condScl(fn v16:[int]0 => addi(v16,30),v10,condScl(fn v13:[int]0 => subi(v13,30),notb(v10),28))) in
let v19:[int]2 = reshape{[int],[1,2]}([2,2],iotaV(4)) in
let v20:[bool]0 = gti(3,2) in
let v28:[int]2 = prArrI(power(fn v25:[int]2 => each{[int,int],[2]}(fn v27:[int]0 => addi(v27,30),v25),b2i(v20),power(fn v22:[int]2 => each{[int,int],[2]}(fn v24:[int]0 => subi(v24,30),v22),b2i(notb(v20)),v19))) in
let v29:[bool]0 = gti(3,3) in
let v37:[int]2 = prArrI(power(fn v34:[int]2 => each{[int,int],[2]}(fn v36:[int]0 => addi(v36,30),v34),b2i(v29),power(fn v31:[int]2 => each{[int,int],[2]}(fn v33:[int]0 => subi(v33,30),v31),b2i(notb(v29)),v19))) in
0.00
